# AI_Job_Matcher

./: .gitignore  ReadMe.md  pyproject.toml
src/: __init__.py
src/ai/: __init__.py  ai_judger.py  ai_model.py  bert_model.py  chatgpt_model.py  qwen_model.py
src/main/: __init__.py  job_match_server.py
src/parsers/: __init__.py  linkedin_parser.py  web_parser.py
tests/: test_linkedin_parser.py  test_qwen_model.py
